--- a/Source/CriticalPath.Web/Views/Shared/EditorTemplates/Product.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/EditorTemplates/Product.cshtml
@@ -7,9 +7,5 @@
 }
 @if (Model != null)
 {
-    if (Model.Category != null)
-    {
-        <h4 class="mt6 pull-left" title="@EntityStrings.Category">@Model.Category.Title /&nbsp;</h4>
-    }
-    <h4 class="mt6 pull-left" title="@Model.Code">@Model.Title</h4>
+    <h4 class="mt6 pull-left" title="@Model.Description">@Model.ProductCode</h4>
 }
