--- a/Source/CriticalPath.Web/Views/Shared/_ProductCategorySelectPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_ProductCategorySelectPartial.cshtml
@@ -32,7 +32,7 @@
                 $.each(categories, function (index, category) {
                     targetSelect.append($('<option/>', {
                         value: category.Id,
-                        text: category.Title
+                        text: category.CategoryName
                     }));
                 });
             });
