--- a/Source/CriticalPath.Web/Views/ProductCategories/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/ProductCategories/Create.cshtml
@@ -13,14 +13,7 @@
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.Title, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
-            </div>
-        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.ParentCategoryId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
@@ -29,17 +22,17 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.CategoryName, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.Code, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.Code, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.CategoryName, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.CategoryName, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-7 col-md-8 col-sm-9">
-                @Html.TextAreaFor(m => m.Description, 4, 1, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.CategoryCode, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.CategoryCode, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.CategoryCode, "", new { @class = "text-danger" })
             </div>
         </div>
         @Html.Partial("_SaveButtonsPartial")
