--- a/Source/CriticalPath.Web/Views/ProductCategories/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/ProductCategories/Index.cshtml
@@ -19,35 +19,39 @@
 	var title = EntityStrings.ProductCategories;
 }
 <div class="row well">
-    <div class="col-md-8 col-sm-7">
+    <div class="col-md-4 visible-lg visible-md">
         <h4>@title</h4>
     </div>
     @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "searchForm" }))
     {
         @Html.Hidden("page", page)
         @Html.Hidden("pageSize", pageSize)
-        <div class="col-md-4 col-sm-5">
+        <div class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-0 col-sm-5 col-sm-offset-1">
+            @Html.DropDownList("ParentCategoryId", null, ActionStrings.DisplayAll, htmlAttributes: new { @class = "form-control", onchange = "getPagedData(1)" })
+        </div>
+        <div class="col-md-4 col-sm-6">
             @Html.Partial("_SearchBoxPartial")
         </div>
     }
 </div>
 @if (totalCount > 0)
 {
-    <table class="table table-hover">
-        <tr>
-            <th>@ActionStrings.Action</th>
-            <th>@Html.DisplayNameFor(model => model.Title)</th>
-            <th>@Html.DisplayNameFor(model => model.Code)</th>
-            <th>@Html.DisplayNameFor(model => model.ParentCategory)</th>
-            <th>@Html.DisplayNameFor(model => model.SubCategories)</th>
-            <th>@Html.DisplayNameFor(model => model.Products)</th>
-        </tr>
+	<div id="productCategoryGridParent" class="table-responsive">
+		<table id="productCategoryGrid" class="table table-striped table-bordered table-hover">
+			<tr>
+				<th width="60">@ActionStrings.Action</th>
+                <th>@Html.DisplayNameFor(model => model.ParentCategory)</th>
+				<th>@Html.DisplayNameFor(model => model.CategoryName)</th>
+				<th>@Html.DisplayNameFor(model => model.CategoryCode)</th>
+				<th>@Html.DisplayNameFor(model => model.SubCategories)</th>
+				<th>@Html.DisplayNameFor(model => model.Products)</th>
+			</tr>
     @foreach (var item in Model)
     {
             <tr>
                 <td>
                     <div class="btn-group">
-                        <button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">
+                        <button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" onclick="onActionMenuClick(this);">
                             <span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu">
@@ -59,7 +63,7 @@
                             @if (canUserDelete)
                             {
                                 <li>
-                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.Title)</b>', @item.Id);">
+                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.CategoryName)</b>', @item.Id);">
                                         @ActionStrings.Delete
                                     </a>
                                 </li>
@@ -67,24 +71,38 @@
                         </ul>
                     </div>
                 </td>
-                <td>@Html.DisplayFor(modelItem => item.Title)</td>
-                <td>@Html.DisplayFor(modelItem => item.Code)</td>
                 <td>@Html.DisplayFor(modelItem => item.ParentCategory)</td>
+                <td>@Html.DisplayFor(modelItem => item.CategoryName)</td>
+                <td>@Html.DisplayFor(modelItem => item.CategoryCode)</td>
                 <td>@item.SubCategories.Count</td>
                 <td>@item.Products.Count</td>
             </tr>
-    }
-    </table>
-    @Html.Partial("_PagerPartial")
-    if (canUserDelete)
-    {
-        @Html.Partial("_MessageBoxPartial")
-    }
+	}
+		</table>
+    </div>
+	@Html.Partial("_PagerPartial")
+	@Html.Partial("_MessageBoxPartial")
+	@section scripts{
+		@Html.Partial("_IndexScriptsPartial", "ProductCategories") @* Controller's name *@
+        <script type="text/javascript">
+            function onActionMenuClick(menuBtn) {
+                setTimeout(function () {
+                    var menuHeight = 120;
+                    var rectMenu = menuBtn.getBoundingClientRect();
+                    var rectGrid = document.getElementById("productCategoryGrid").getBoundingClientRect();
+                    var diffY = rectGrid.bottom - rectMenu.bottom - menuHeight;
+
+                    if (diffY < 0) {
+                        var viewport = $('#productCategoryGridParent');
+                        var viewportScroll = viewport.scrollTop();
+                        viewport.scrollTop((diffY * -1) + viewportScroll);
+                    }
+                }, 250);
+            }
+        </script>
+	}
 }
 else
 {
     <h4>@MessageStrings.NoResults!</h4>
-}
-@section scripts{
-    @Html.Partial("_IndexScriptsPartial", "ProductCategories")
 }
