--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Product.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Product.cshtml
@@ -7,13 +7,5 @@
 }
 @if (Model != null)
 {
-    if (Model.Category != null)
-    {
-            <a class="pull-left" title="@EntityStrings.Category"
-            href='/ProductCategoriess/Details/@Model.CategoryId'>
-            @Model.Category.Title /&nbsp;
-            </a>
-    }
-    <a href='/Products/Details/@Model.Id'>
-        @Model.Title </a >
+    <a href='/Products/Details/@Model.Id'>@Model.ProductCode </a >
 }
