--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/AspNetUser.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/AspNetUser.cshtml
@@ -1,6 +1,6 @@
-@using LMT.Web.Models
-@using LMT.Data
-@using LMT.i8n
+@using CriticalPath.Web.Models
+@using CriticalPath.Data
+@using CP.i8n
 @model AspNetUser
 @{
     Layout = null;
