--- a/Source/CriticalPath.Web/Views/Products/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Create.cshtml
@@ -29,6 +29,16 @@
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
             </div>
         </div>
+        @*
+            <div class="form-group">
+                @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+                <div class="col-lg-5 col-md-6 col-sm-7">
+                    @Html.Partial("_ImageUpload", new ImageUploadViewModel("ImageUrl", Model.ImageUrl))
+                    @Html.ValidationMessageFor(m => m.ImageUrl, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        *@
+        @Html.Partial("_AllPriceEdit", Model)
         @Html.Partial("_SaveButtonsPartial")
     </div>
 }
