--- a/Source/CriticalPath.Web/Views/Products/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Index.cshtml
@@ -33,49 +33,47 @@
 </div>
 @if (totalCount > 0)
 {
-    <div id="mainGridDiv" class="table-responsive">
-        <table id="mainGrid" class="table table-striped table-bordered table-hover">
+    <div id="productGridParent" class="table-responsive">
+        <table id="productGrid" class="table table-striped table-bordered table-hover">
             <tr>
-                <th>@ActionStrings.Action</th>
                 <th>@Html.DisplayNameFor(model => model.ProductCode)</th>
                 <th>@Html.DisplayNameFor(model => model.Description)</th>
                 <th>@Html.DisplayNameFor(model => model.Category)</th>
+                <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
                 <th>@Html.DisplayNameFor(model => model.Discontinued)</th>
+                <th>@ActionStrings.Actions</th>
             </tr>
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>
-                        <div class="btn-group">
-                            <button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" onclick="onActionMenuClick(this);">
-                                <span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink(ActionStrings.Details, "Details", new { id = item.Id })</li>
-                                @if (canUserEdit)
-                                {
-                                    <li>@Html.ActionLink(ActionStrings.Edit, "Edit", new { id = item.Id })</li>
-                                }
-                                @if (canUserDelete)
-                                {
-                                    <li>
-                                        <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.ProductCode)</b>', @item.Id);">@ActionStrings.Delete</a>
-                                    </li>
-                                }
-                            </ul>
-                        </div>
-                    </td>
                     <td>@Html.DisplayFor(modelItem => item.ProductCode)</td>
                     <td>@Html.DisplayFor(modelItem => item.Description)</td>
                     <td>@Html.DisplayFor(modelItem => item.Category)</td>
+                    <td align="right">
+                        @Html.DisplayFor(modelItem => item.UnitPrice)
+                        @Html.DisplayFor(modelItem => item.SellingCurrency)
+                    </td>
                     <td>
                         @if (item.Discontinued)
                         {
-                            @:@Html.DisplayFor(modelItem => item.Discontinued) @Html.DisplayFor(modelItem => item.DiscontinueDate)
+                            @Html.DisplayFor(modelItem => item.Discontinued)
+                            @Html.DisplayFor(modelItem => item.DiscontinueDate)
                         }
                     </td>
-                </tr>
-            }
+                    <td>
+                        <a href='@Url.Action("Details", new { id = item.Id })' title="@ActionStrings.Details"><span class="glyphicon glyphicon-new-window ml5"></span></a>
+                        @if (canUserEdit)
+                        {
+                            <a href='@Url.Action("Edit", new { id = item.Id })' title="@ActionStrings.Edit"><span class="glyphicon glyphicon-edit ml5"></span></a>
+                        }
+                        @if (canUserDelete)
+                        {
+                            <a href="#deleteConfirm" data-toggle="modal" title="@ActionStrings.Delete" onclick="setDelete('<b>@(item.ProductCode)</b>', @item.Id);" >
+                                <span class="glyphicon glyphicon-trash ml5"></span>
+                                </a>
+                        }
+                    </td>
+                </tr>}
         </table>
     </div>
     @Html.Partial("_PagerPartial")
@@ -85,14 +83,13 @@
         <script type="text/javascript">
             function onActionMenuClick(menuBtn) {
                 setTimeout(function () {
-                    var menuHeight = 120;
+                    var menuHeight = 160;
                     var rectMenu = menuBtn.getBoundingClientRect();
-                    var rectGrid = document.getElementById("mainGrid").getBoundingClientRect();
-                    console.log("Click", rectGrid);
+                    var rectGrid = document.getElementById("productGrid").getBoundingClientRect();
                     var diffY = rectGrid.bottom - rectMenu.bottom - menuHeight;
-                    console.log("Click", diffY);
+
                     if (diffY < 0) {
-                        var viewport = $('#mainGridDiv');
+                        var viewport = $('#productGridParent');
                         var viewportScroll = viewport.scrollTop();
                         viewport.scrollTop((diffY * -1) + viewportScroll);
                     }
