--- a/Source/CriticalPath.Web/Views/Shared/_ProductCategorySelectPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_ProductCategorySelectPartial.cshtml
@@ -6,14 +6,11 @@
 }
 
 <div class="form-group">
-    @Html.Label(EntityStrings.ParentCategory, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-    <div class="col-lg-5 col-md-6 col-sm-7">
+    @Html.Label(EntityStrings.Category, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+    <div class="col-lg-2 col-md-3 col-sm-3 col-xs-5">
         @Html.DropDownList("ParentCategoryId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
     </div>
-</div>
-<div class="form-group">
-    @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-    <div class="col-lg-5 col-md-6 col-sm-7">
+    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-7">
         @Html.DropDownList("CategoryId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.CategoryId, "", new { @class = "text-danger" })
     </div>
