Entity type Country added

--- a/Source/CriticalPath.Web/Views/Processes/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/Processes/Details.cshtml
@@ -119,10 +119,10 @@
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.CancelNotes)
+        @Html.DisplayNameFor(model => model.CancellationReason)
     </label>
     <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.CancelNotes)
+        @Html.DisplayFor(m => m.CancellationReason)
     </div>
 </div>
 <div class="row">
