--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/PurchaseOrder.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/PurchaseOrder.cshtml
@@ -53,8 +53,8 @@
                             @Html.DisplayFor(m => m.CancelDate)
                         </div>
                         <div>
-                            <span class="text-danger">@Html.DisplayNameFor(m => m.CancelNotes):</span>
-                            @Html.DisplayFor(m => m.CancelNotes)
+                            <span class="text-danger">@Html.DisplayNameFor(m => m.CancellationReason):</span>
+                            @Html.DisplayFor(m => m.CancellationReason)
                         </div>
                     }
 
