--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -25,6 +25,18 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            @EntityStrings.Countries<b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink(@EntityStrings.Countries, "Index", "Countries")</li>
+                            <li>@Html.ActionLink(@EntityStrings.CreateCountry, "Create", "Countries")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink(@EntityStrings.Currencies, "Index", "Currencies")</li>
+                            <li>@Html.ActionLink(@EntityStrings.CreateCurrency, "Create", "Currencies")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             @CommonStrings.Settings<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
@@ -33,9 +45,6 @@
                             <li class="divider"></li>
                             <li>@Html.ActionLink(@EntityStrings.ProcessTemplates, "Index", "ProcessTemplates")</li>
                             <li>@Html.ActionLink(@EntityStrings.CreateProcessTemplate, "Create", "ProcessTemplates")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink(@EntityStrings.Currencies, "Index", "Currencies")</li>
-                            <li>@Html.ActionLink(@EntityStrings.CreateCurrency, "Create", "Currencies")</li>
                             <li class="divider"></li>
                             <li>@Html.ActionLink(@EntityStrings.FreightTerms, "Index", "FreightTerms")</li>
                             <li>@Html.ActionLink(@EntityStrings.CreateFreightTerm, "Create", "FreightTerms")</li>
