--- a/Source/CriticalPath.Web/Views/PurchaseOrders/CancelPO.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/CancelPO.cshtml
@@ -18,10 +18,10 @@
         @Html.Partial("PartialDetails")
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CancelNotes, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.CancellationReason, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(model => model.CancelNotes, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CancelNotes, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.CancellationReason, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CancellationReason, "", new { @class = "text-danger" })
             </div>
         </div>
 
