--- a/Source/CriticalPath.Web/Views/Shared/_ICancellationPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_ICancellationPartial.cshtml
@@ -16,10 +16,10 @@
     </div>
     <div class="row">
         <label class="control-label col-md-2 col-sm-3 fontSize150pc text-danger">
-            @Html.DisplayNameFor(model => model.CancelNotes)
+            @Html.DisplayNameFor(model => model.CancellationReason)
         </label>
         <div class="col-md-10 col-sm-9">
-            @Html.DisplayFor(m => m.CancelNotes)
+            @Html.DisplayFor(m => m.CancellationReason)
         </div>
     </div>
 }
