--- a/Source/CriticalPath.Web/Views/Customers/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Customers/Index.cshtml
@@ -3,101 +3,119 @@
 @using CP.i8n
 @model IEnumerable<Customer>
 @{
-    ViewBag.Title = @EntityStrings.Customers;
-
     //Authorization Flags
     bool canUserEdit = ViewBag.canUserEdit;
     bool canUserCreate = ViewBag.canUserCreate;
     bool canUserDelete = ViewBag.canUserDelete;
     bool canUserAddPurchaseOrder = ViewBag.canUserAddPurchaseOrder;
     bool canUserAddContact = ViewBag.canUserAddContact;
+    bool canUserDiscontinue = ViewBag.canUserDiscontinue;
 
-    //Records & Pager
-    int page = ViewBag.page;
-    int totalCount = ViewBag.totalCount;
-    int pageSize = ViewBag.pageSize;
-    int pageCount = ViewBag.pageCount;
+    ViewBag.Title = @EntityStrings.Customers;
 }
 <div class="row well">
     <div class="col-md-8 col-sm-7">
         <h4>@EntityStrings.Customers</h4>
     </div>
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "searchForm" }))
-    {
-        @Html.Hidden("page", page)
-        <div class="col-md-4 col-sm-5">
-            @Html.Partial("_SearchBoxPartial")
-        </div>
-    }
+    <div class="col-md-4 col-sm-5">
+        @Html.Partial("_SearchBoxPartial")
+    </div>
 </div>
-@if (totalCount > 0)
-{
-    <table class="table table-hover">
-        <tr>
-            <th>@ActionStrings.Action</th>
-            <th>@Html.DisplayNameFor(model => model.CompanyName)</th>
-            <th>@Html.DisplayNameFor(model => model.CustomerCode)</th>
-            <th>@Html.DisplayNameFor(model => model.City)</th>
-            <th>@Html.DisplayNameFor(model => model.Country)</th>
-            <th>@Html.DisplayNameFor(model => model.Contacts)</th>
-            <th>@Html.DisplayNameFor(model => model.Orders)</th>
-        </tr>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    <div class="btn-group">
-                        <button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">
-                            <span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink(ActionStrings.Details, "Details", new { id = item.Id })</li>
-                            @if (canUserEdit)
-                            {
-                                <li>@Html.ActionLink(ActionStrings.Edit, "Edit", new { id = item.Id })</li>
-                            }
-                            @if (canUserDelete)
-                            {
-                                <li>
-                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.CompanyName)</b>', @item.Id);">
-                                        @ActionStrings.Delete
-                                    </a>
-                                </li>
-                            }
-                            @if (canUserAddPurchaseOrder || canUserAddContact)
-                            {
-                                <li class="divider"></li>
-                            }
-                            @if (canUserAddContact)
-                            {
-                                <li>@Html.ActionLink(EntityStrings.AddContact, "Create", "Contacts", new { companyId = item.Id }, null)</li>
-                            }
-                            @if (canUserAddPurchaseOrder)
-                            {
-                                <li>@Html.ActionLink(EntityStrings.AddPurchaseOrder, "Create", "PurchaseOrders", new { customerId = item.Id }, null)</li>
-                            }
-                        </ul>
-                    </div>
-                </td>
-                <td>@Html.DisplayFor(modelItem => item.CompanyName)</td>
-                <td>@Html.DisplayFor(modelItem => item.CustomerCode)</td>
-                <td>@Html.DisplayFor(modelItem => item.City)</td>
-                <td>@Html.DisplayFor(modelItem => item.Country)</td>
-                <td>@item.Contacts.Count</td>
-                <td>@item.Orders.Count</td>
-            </tr>
-        }
-    </table>
-    @Html.Partial("_PagerPartial")
-    if (canUserDelete)
-    {
-        @Html.Partial("_MessageBoxPartial")
-    }
-}
-else
-{
-    <h4>@MessageStrings.NoResults!</h4>
-}
+
+<div id="mainGrid" class="ag-style ag-basic" style="width:100%;height:400px;"></div>
+<nav><ul id="pagerUl" class="pagination"></ul></nav>
+@Html.Partial("_MessageBoxPartial")
+
 @section scripts{
+    @Scripts.Render("~/js/ag-grid")
     @Html.Partial("_IndexScriptsPartial", "Customers")
+    @Html.Partial("_agGridScriptsPartial", "/Customers/GetCustomerPagedList") @* Service url *@
+    <script type="text/javascript">
+        var result = @Html.Raw(ViewBag.result);
+        var gridOptions;
+
+        var initPage = function() {
+            var init = this;
+            init.columnDefs = columnDefs();
+            init.gridOptions = {
+                columnDefs: init.columnDefs,
+                rowHeight: 26,
+                pageSize: result.pageSize,
+                headerHeight: 32,
+                rowData: result.Items,
+                overlayNoRowsTemplate: '<span class="fontSize150pc">@MessageStrings.NoResults</span>'
+            };
+
+            function columnDefs(){
+                return[
+                     { headerName: '@ActionStrings.Action', field: "Id", width: 64, cellRenderer: actionCellRenderer },
+                     { headerName: '@Html.DisplayNameFor(m => m.CompanyName)', field: "CompanyName", width: 300 },
+                     { headerName: '@Html.DisplayNameFor(m => m.CustomerCode)', field: "CustomerCode", width: 160 },
+                     { headerName: '@Html.DisplayNameFor(m => m.City)', field: "City", width: 112 },
+                     { headerName: '@Html.DisplayNameFor(m => m.Country)', field: "Country", width: 112 },
+                     { headerName: '@Html.DisplayNameFor(m => m.Discontinued)', field: "Discontinued", width: 112, cellRenderer: discontinueCellRenderer }
+                ];
+            }
+
+            function actionCellRenderer(params) {
+                var actions = '<div class="btn-group" style="margin-top:-3px;">' +
+                    '<button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-primary dropdown-toggle" data-toggle="dropdown" onclick="onActionMenuClick(this)">' +
+                    '<span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>' +
+                    '</button>' +
+                    '<ul class="dropdown-menu mb15" role="menu">' +
+                    '<li><a href="/Customers/Details/' + params.value + '">@ActionStrings.Details</a></li>' +
+                @if (canUserEdit)
+                {
+                    @:'<li><a href="/Customers/Edit/' + params.value + '">@ActionStrings.Edit</a></li>' +
+                }
+                @if (canUserDiscontinue)
+                {
+                    @:(params.data.Discontinued ? '' : '<li><a href="/Customers/Discontinue/' + params.value + '">@ActionStrings.Discontinue</a></li>') +
+                }
+                @if(canUserDelete)
+                {
+                    @:'<li><a href="#deleteConfirm" data-toggle="modal" onclick="setDelete(getObjectById(result.Items,' + params.value + ').CompanyName, ' + params.value + ');">@ActionStrings.Delete</a></li>' +
+                }
+                '<li class="divider"></li>' +
+                @if(canUserAddContact)
+                {
+                    @:'<li><a href="/Contacts/Create/?companyId=' + params.value + '">@EntityStrings.AddContact</a></li>' +
+                }
+                '<li><a href="/Contacts/Index/?companyId=' + params.value + '">@EntityStrings.Contacts</a></li>' +
+                '<li class="divider"></li>' +
+                @if (canUserAddPurchaseOrder)
+                {
+                    @:(params.data.Discontinued ? '' : '<li><a href="/PurchaseOrders/Create/?customerId=' + params.value + '">@EntityStrings.AddPurchaseOrder</a></li>') +
+                }
+                '<li><a href="/PurchaseOrders/Index/?customerId=' + params.value + '">@EntityStrings.PurchaseOrders</a></li>' +
+                '</ul></div>';
+
+                return actions;
+            }
+
+            $.ajaxSetup({ cache: false });
+            gridOptions = init.gridOptions;
+            // angularGrid is a global function
+            agGridGlobalFunc('#mainGrid', gridOptions);
+
+            setPagerButtons($('#pagerUl'), result.Page, result.PageCount);
+            displayRecordStats(result.Items.length, result.TotalCount);
+        }
+
+        function onActionMenuClick(menuBtn){
+            setTimeout(function(){
+                var menuHeight = 280;
+                var rectMenu = menuBtn.getBoundingClientRect();
+                var rectGrid = document.getElementById("mainGrid").getBoundingClientRect();
+
+                var diffY = rectGrid.bottom - rectMenu.bottom - menuHeight;
+                if (diffY < 0) {
+                    var viewport = $('#mainGrid .ag-body-viewport');
+                    var viewportScroll = viewport.scrollTop();
+                    viewport.scrollTop((diffY * -1) + viewportScroll);
+                }
+            },250);
+        }
+        document.addEventListener("DOMContentLoaded", initPage());
+    </script>
 }
