--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Product.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Product.cshtml
@@ -7,5 +7,5 @@
 }
 @if (Model != null)
 {
-    <a href='/Products/Details/@Model.Id'>@Model.ProductCode </a >
+    <div><a href='/Products/Details/@Model.Id'>@Model.ProductCode</a></div>
 }
