--- a/Source/CriticalPath.Web/Views/Customers/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/Customers/Create.cshtml
@@ -29,6 +29,15 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(model => model.DiscountRate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @{ Html.EnableClientValidation(false); }
+                @Html.EditorFor(m => m.DiscountRate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.DiscountRate, "", new { @class = "text-danger" })
+                @{ Html.EnableClientValidation(true); }
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Phone1, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextBoxFor(m => m.Phone1, new { @class = "form-control", autocomplete = "off" })
@@ -47,6 +56,13 @@
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextBoxFor(m => m.Phone3, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Phone3, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.CountryId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DropDownListFor(m => m.CountryId, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.CountryId, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -82,13 +98,6 @@
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.ZipCode, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.Country, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
