--- a/Source/CriticalPath.Web/Views/Suppliers/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/Suppliers/Edit.cshtml
@@ -50,6 +50,13 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(model => model.CountryId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DropDownListFor(m => m.CountryId, null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.CountryId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Address1, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", autocomplete = "off" })
@@ -82,13 +89,6 @@
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextBoxFor(m => m.ZipCode, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.ZipCode, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Country, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.Country, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
